# convert2md

./: .gitignore  README.md  config.example.toml  pyproject.toml
scripts/: init_project.py  main.py
scripts/linux/: run_app.sh
scripts/win/: freshvenv-windows.bat  run_app.bat
src/convert2md/: __init__.py  cli_app.py  paths.py
src/convert2md/converters/: doclingparser.py  llamaparse.py  main.py  parent.py
src/convert2md/utils/: config_parser.py  credentials.py
src/template_python/: __init__.py  cli_app.py  llm.py
src/template_python/cryptography/: __init__.py  fernet.py  text.py
src/template_python/notify/: Gotify.py  Slack.py
src/template_python/utils/: config_parser.py  credentials.py  decorators.py  logger.py
src/tests/: test_credentials.py  test_cryptography.py  test_parent.py
