[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "template_python"
requires-python = ">=3.12.0"
authors = [{name = "Arun Kishore", email = "pypi@rpakishore.co.in"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)"]
dynamic = ["version", "description"]
dependencies = [
    "cryptography",
    "typer",
    "slack_sdk",
    "ak_requests", #Gotify
    "keyring", #credentials.py, llm.py
    "ollama",
    "tiktoken",
    "openai",
    "instructor",
    "pydantic", #llm.py
    "rich",
]

[project.optional-dependencies]

dev = [
    "ipykernel",
    "pytest",
    "ipywidgets"
]

[project.urls]
Home = "https://github.com/rpakishore/template_python"

[project.scripts]
cli="template_python.cli_app:app"
